ChangeLog
---------

* passing queryargs from queues.conf to query.querycondor() call at Condor batchstatus plugin.

* siteid removed from several places and replaced by wmsqueue.

* method validate() added to configloader.py

* generic_get() simplified

* InfoContainer simplified. Only one argument to __init__(), and it is a class instead of an object.

* fake info classes imports removed, and importing from the right place (info.py instead of factory.py)

* log messages in sched plugins more homogeneous. Now all of them are "Return=123".

* created a script in misc/ to search for pilots running (in theory) for more than 8 days.

* Removed allowed variables for Test and Offline Sched plugins, and from the queues.conf. If the plugin is used, we assume it is allowed. 

* more robust code to deal with scenario where condor_q gives no output

* all JSD.add() method replaced to use the new format (2 inputs instead of 1)

* jsd.py and jsd3.py moved to attic/ and jsd4.py moved to jsd.py

* logserver2.py moved to logserver.py, and old one moved to attic/

* using method merge() instead of deepcopy() in configloader.py

* method section2dict() created in configloader. It will be usefull to generate the mappings from config files

* getConfig() method in configloader.py embedded in a try - except block
  and all config loader object creation in factory.py embedded in try - except blocks

* Exception class ConfigFailure renamed ConfigFailureMandatoryAttr

* Cleaning info.py code:
    -- method dict() removed
    -- method getconfig() removed
    -- method __add__() removed
    -- method set() removed
    -- method get() removed
    -- property total removed
    -- class attribute valid = [] removed from all classes:
        -- therefore method reset() removed
        -- therefore method __setattr__() removed
    -- method __getattribute__() is created
    -- method valid() in class InfoContainer deleted
    -- no longer importing Config from configloader 